implement email protection feature with button toggle and styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3>Contact Details</h3>
           <p><i class="fas fa-user"></i> James Hitchcock</p>
           <p><i class="fas fa-map-marker-alt"></i> Bellingham, Washington</p>
-          <p><i class="fas fa-envelope"></i> <a href="mailto:jhitchcock687@gmail.com">jhitchcock687@gmail.com</a></p>
+          <p><i class="fas fa-envelope"></i> <span id="email-container"><button id="show-email" class="email-button">Show Email</button><span id="email-address" class="hidden-email"></span></span></p>
         </div>
       </section>
       
