Update index with recipe project

--- a/index.html
+++ b/index.html
@@ -337,6 +337,24 @@
             </div>
           </div>
           
+          <!-- Recipe Site -->
+          <div class="project-card" data-category="web tools">
+            <div class="project-image">
+              <img src="images/projects/recipe.webp" alt="Recipe Keeper App" loading="lazy">
+              <div class="project-overlay">
+                <a href="Projects/Recipe-Site/index.html" class="open-project-btn" target="_blank">Open Project</a>
+              </div>
+            </div>
+            <h3>Recipe Keeper</h3>
+            <p>A mobile-friendly PWA for managing recipes with screen wake lock and offline storage.</p>
+            <div class="project-tags">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+              <span>PWA</span>
+            </div>
+          </div>
+          
           <!-- More Projects Card -->
           <div class="project-card more-projects-card" data-category="web games tools">
             <div class="more-projects-content">
