Add bootlicker simulator project and added project to game modal

--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
                   <li><a href="Projects/Tennis/game.html" target="_blank">Tennis Game</a></li>
                   <li><a href="Projects/Cluedo/index.html" target="_blank">Cluedo Game</a></li>
                   <li><a href="Projects/MadLib/index.html" target="_blank">Mad Lib Generator</a></li>
+                  <li><a href="Projects/BootLicker/index.html" target="_blank">Bootlicker Simulator</a></li>
                 </ul>
               </div>
               
